--- a/Desktop/coder house/paginas/quienessomos.html
+++ b/Desktop/coder house/paginas/quienessomos.html
@@ -57,27 +57,7 @@
  
   <!-- fin del header -->
   <section>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+      
     <div class="contenedorImagen">
       <img class="imagenBody" src="..\imagenes\ninosjugando.jpg">
     </div>
@@ -122,10 +102,10 @@
       <div class="box">
         <h3>Siguenos</h3> 
         <div class="redSocial"> 
-          <a href="www.facebook.com" target="_blank" class="fa fa-facebook"></a>
-          <a href="www.instagram.com"target="_blank"class="fa fa-instagram"></a>
-          <a href="www.twitter.com" target="_blank" class="fa fa-twitter"></a>
-          <a href="www.youtube.com" target="_blank" class="fa fa-youtube"></a>
+          <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"></a>
+          <a href="https://www.instagram.com"target="_blank"class="fa fa-instagram"></a>
+          <a href="https://www.twitter.com" target="_blank" class="fa fa-twitter"></a>
+          <a href="https://www.youtube.com" target="_blank" class="fa fa-youtube"></a>
         </div>
       </div>
     </div> 
