--- a/Desktop/coder house/paginas/contacto.html
+++ b/Desktop/coder house/paginas/contacto.html
@@ -152,10 +152,10 @@
       <div class="box">
         <h3>Siguenos</h3> 
         <div class="redSocial"> 
-          <a href="www.facebook.com" target="_blank" class="fa fa-facebook"></a>
-          <a href="www.instagram.com"target="_blank"class="fa fa-instagram"></a>
-          <a href="www.twitter.com" target="_blank" class="fa fa-twitter"></a>
-          <a href="www.youtube.com" target="_blank" class="fa fa-youtube"></a>
+          <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"></a>
+          <a href="https://www.instagram.com"target="_blank"class="fa fa-instagram"></a>
+          <a href="https://www.twitter.com" target="_blank" class="fa fa-twitter"></a>
+          <a href="https://www.youtube.com" target="_blank" class="fa fa-youtube"></a>
         </div>
       </div>
     </div> 
