--- a/Desktop/coder house/index.html
+++ b/Desktop/coder house/index.html
@@ -11,11 +11,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--Css -->
   
-    <link rel="stylesheet" type="text/css" href="./css/all.css" integrity=" sha384-50oBUHEmvpQ+1lw4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./css/all.css"  >
     <link rel="stylesheet" type="text/css" href="./css/main.css">
   
     <!--iconos-->
-    <script src="https:/kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous">  </script>
+    <script src="./js/eb496ab1a0.js" >  </script>
     <title>Home</title> 
 </head>
 <body>
