--- a/Desktop/coder house/paginas/bebes.html
+++ b/Desktop/coder house/paginas/bebes.html
@@ -60,7 +60,7 @@
   
   <section>
     <div class="contenedorImagen">
-    <img class="imagenBody"src="..\imagenes\ropadebebes.jpg">
+    <img class="imagenBody"src="..\imagenes\ropadebebes.jpg" alt="imagen body bebes uno">
   </div>
     
   <div class="contenedor">
@@ -71,7 +71,7 @@
   </div>
     
   <div class="contenedor">
-    <img class="imagenBody" src="..\imagenes\conjuntobebes.jpg">
+    <img class="imagenBody" src="..\imagenes\conjuntobebes.jpg" alt="imagen body bebes">
     <p id="parrafo">La mejor combinacion, siempre lo hace ver mejor</p>
   </div>
 
@@ -101,7 +101,7 @@
   </section>
   
   <div class="botonWhatsApp">
-    <img src="..\imagenes/logoWhatsapp.png" alt="">
+    <img src="..\imagenes/logoWhatsapp.png" alt="logo wathsapp">
   </div>
   
   <footer class="piePagina">
