--- a/Desktop/coder house/paginas/contacto.html
+++ b/Desktop/coder house/paginas/contacto.html
@@ -125,7 +125,7 @@
   </section>
     
   <div class="botonWhatsApp">
-    <img src="..\imagenes/logoWhatsapp.png" alt="">
+    <img src="..\imagenes/logoWhatsapp.png" alt="logo wathsapp">
   </div>
 
  
