--- a/Desktop/coder house/paginas/girls.html
+++ b/Desktop/coder house/paginas/girls.html
@@ -59,7 +59,7 @@
 <body>
   <section>
     <div class="contenedorImagen">
-      <img class="imagenBody" src="..\imagenes\ropadeninas.jpg">
+      <img class="imagenBody" src="..\imagenes\ropadeninas.jpg" alt="imagen body de ninas">
     </div>
       
     <div class="contenedor">
@@ -70,7 +70,7 @@
     </div>
     
     <div class="contenedor">
-      <img class="imagenBody" src="..\imagenes\conjuntoninas.jpg">
+      <img class="imagenBody" src="..\imagenes\conjuntoninas.jpg" alt="imagen body ninas dos"> 
       <p id="parrafo">La mejor combinacion, siempre lo hace ver mejor</p>
     </div>
   </section>
@@ -99,7 +99,7 @@
   </section>
   
   <div class="botonWhatsApp">
-    <img src="..\imagenes/logoWhatsapp.png" alt="">
+    <img src="..\imagenes/logoWhatsapp.png" alt="logo wathsapp">
   </div>
 
 
