--- a/Desktop/coder house/index.html
+++ b/Desktop/coder house/index.html
@@ -60,13 +60,13 @@
     <div id="carouselExampleControls" class="carousel slide mx-auto" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src=".\imagenes\portada.jpg" class="d-block w-100" alt="...">
+          <img src=".\imagenes\portada.jpg" class="d-block w-100" alt="portada principal">
         </div>
         <div class="carousel-item">
-          <img src=".\imagenes\conjuntonino.jpg " class="d-block w-100" alt="...">
+          <img src=".\imagenes\conjuntonino.jpg " class="d-block w-100" alt= "portada dos">
         </div>
         <div class="carousel-item">
-          <img src=".\imagenes\ropadebb.jpg" class="d-block w-100" alt="...">
+          <img src=".\imagenes\ropadebb.jpg" class="d-block w-100" alt=" portada tres">
         </div>
         <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
@@ -95,12 +95,12 @@
       <p>Estos son los productos favoritos, de nuestros clientes</p>
       
       <div class="gridPadre">
-        <img class="imagenGaleria" src=".\imagenes\ropadebb.jpg" />
-        <img class="imagenGaleria" src=".\imagenes\ropadebebes.jpg"/> 
-        <img class="imagenGaleria" src=".\imagenes\ropadeninas.jpg"/>
-        <img class="imagenGaleria" src=".\imagenes\conjuntonino.jpg"/>
-        <img class="imagenGaleria" src=".\imagenes\conjuntoninas.jpg"/>
-        <img class="imagenGaleria" src=".\imagenes\conjuntobebes.jpg"/>
+        <img class="imagenGaleria" src=".\imagenes\ropadebb.jpg" alt="ropa de bb"/>
+        <img class="imagenGaleria" src=".\imagenes\ropadebebes.jpg" alt="ropa de bebes"/> 
+        <img class="imagenGaleria" src=".\imagenes\ropadeninas.jpg"alt="ropa de ninas">
+        <img class="imagenGaleria" src=".\imagenes\conjuntonino.jpg" alt=" conjunto nino"/>
+        <img class="imagenGaleria" src=".\imagenes\conjuntoninas.jpg" alt="conunto nina"/>
+        <img class="imagenGaleria" src=".\imagenes\conjuntobebes.jpg" alt="conjunto bebes"/>
 
       </div> 
     </div>
@@ -115,7 +115,7 @@
   </section>
   
   <div class="botonWhatsApp"> 
-    <img src=".\imagenes/logoWhatsapp.png" alt="">
+    <img src=".\imagenes/logoWhatsapp.png" alt="logo wathsapp">
   </div>
   
   <footer class="piePagina">
