--- a/Desktop/coder house/paginas/quienessomos.html
+++ b/Desktop/coder house/paginas/quienessomos.html
@@ -59,7 +59,7 @@
   <section>
       
     <div class="contenedorImagen">
-      <img class="imagenBody" src="..\imagenes\ninosjugando.jpg">
+      <img class="imagenBody" src="..\imagenes\ninosjugando.jpg" alt="about us">
     </div>
     <div class="contenedor">
       <h1>¿Quienes somos?</h1>
@@ -77,7 +77,7 @@
   </section>
   
   <div class="botonWhatsApp">
-    <img src="..\imagenes/logoWhatsapp.png" alt="">
+    <img src="..\imagenes/logoWhatsapp.png" alt="logo wathsapp">
   </div>
 
   <footer class="piePagina">
